qt/gen_qinputdialog.h

typedef struct QActionEvent QActionEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
int QInputDialog_getInt5(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue);
int QInputDialog_getInt6(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue, int maxValue);
int QInputDialog_getInt7(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue, int maxValue, int step);
int QInputDialog_getInt8(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue, int maxValue, int step, bool* ok);
int QInputDialog_getInt9(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue, int maxValue, int step, bool* ok, int flags);
double QInputDialog_getDouble4(QWidget* parent, struct miqt_string title, struct miqt_string label, double value);
double QInputDialog_getDouble5(QWidget* parent, struct miqt_string title, struct miqt_string label, double value, double minValue);
double QInputDialog_getDouble6(QWidget* parent, struct miqt_string title, struct miqt_string label, double value, double minValue, double maxValue);
double QInputDialog_getDouble7(QWidget* parent, struct miqt_string title, struct miqt_string label, double value, double minValue, double maxValue, int decimals);
double QInputDialog_getDouble8(QWidget* parent, struct miqt_string title, struct miqt_string label, double value, double minValue, double maxValue, int decimals, bool* ok);
double QInputDialog_getDouble9(QWidget* parent, struct miqt_string title, struct miqt_string label, double value, double minValue, double maxValue, int decimals, bool* ok, int flags);
bool QInputDialog_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QInputDialog_virtualbase_metaObject(const void* self);
bool QInputDialog_override_virtual_metacast(void* self, intptr_t slot);
void* QInputDialog_virtualbase_metacast(void* self, const char* param1);
bool QInputDialog_override_virtual_metacall(void* self, intptr_t slot);
int QInputDialog_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QInputDialog_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QInputDialog_virtualbase_minimumSizeHint(const void* self);
bool QInputDialog_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QInputDialog_virtualbase_sizeHint(const void* self);
bool QInputDialog_override_virtual_setVisible(void* self, intptr_t slot);
void QInputDialog_virtualbase_setVisible(void* self, bool visible);
bool QInputDialog_override_virtual_done(void* self, intptr_t slot);
void QInputDialog_virtualbase_done(void* self, int result);
bool QInputDialog_override_virtual_open(void* self, intptr_t slot);
void QInputDialog_virtualbase_open(void* self);
bool QInputDialog_override_virtual_exec(void* self, intptr_t slot);
int QInputDialog_virtualbase_exec(void* self);
bool QInputDialog_override_virtual_accept(void* self, intptr_t slot);
void QInputDialog_virtualbase_accept(void* self);
bool QInputDialog_override_virtual_reject(void* self, intptr_t slot);
void QInputDialog_virtualbase_reject(void* self);
bool QInputDialog_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QInputDialog_override_virtual_closeEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_closeEvent(void* self, QCloseEvent* param1);
bool QInputDialog_override_virtual_showEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QInputDialog_override_virtual_resizeEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QInputDialog_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* param1);
bool QInputDialog_override_virtual_eventFilter(void* self, intptr_t slot);
bool QInputDialog_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QInputDialog_override_virtual_devType(void* self, intptr_t slot);
int QInputDialog_virtualbase_devType(const void* self);
bool QInputDialog_override_virtual_heightForWidth(void* self, intptr_t slot);
int QInputDialog_virtualbase_heightForWidth(const void* self, int param1);
bool QInputDialog_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QInputDialog_virtualbase_hasHeightForWidth(const void* self);
bool QInputDialog_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QInputDialog_virtualbase_paintEngine(const void* self);
bool QInputDialog_override_virtual_event(void* self, intptr_t slot);
bool QInputDialog_virtualbase_event(void* self, QEvent* event);
bool QInputDialog_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QInputDialog_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QInputDialog_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QInputDialog_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QInputDialog_override_virtual_wheelEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QInputDialog_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QInputDialog_override_virtual_focusInEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QInputDialog_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QInputDialog_override_virtual_enterEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_enterEvent(void* self, QEvent* event);
bool QInputDialog_override_virtual_leaveEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_leaveEvent(void* self, QEvent* event);
bool QInputDialog_override_virtual_paintEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QInputDialog_override_virtual_moveEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QInputDialog_override_virtual_tabletEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QInputDialog_override_virtual_actionEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QInputDialog_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QInputDialog_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);